# Semantic_release_template

./: package-lock.json  package.json  pyproject.toml  release.yml
.github/workflows/: release.yml
notebooks/: test.ipynb
src/: __init__.py  abc.py  bcd.py
