[project]
name = "semantic-release-template"
version = "0.1.0"
description = ""
authors = [
    {name = "IshaanJolly",email = "ijolly1997@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): release version {version} [ci skip]"
version_variables = [
    "src/artifacts/__init__.py:__version__"
]
