[project]
name = "semantic-release-template"
version = "0.1.0"
description = ""
authors = [
    {name = "IshaanJolly", email = "ijolly1997@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
version_variable = "src/__init__.py:__version__"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"
commit_author = "github-actions <action@github.com>"

[tool.semantic_release.publish]
upload_to_repository = false
upload_to_release = true
upload_to_pypi = false

[tool.semantic_release.commit_parser]
parse_trailers = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test"
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]